# BIVT-python-lab-1

./: README.md  pyproject.toml  ssh-agent bash  ssh-agent bash.pub
data/lab04/: a.txt  b.txt
data/lab06/samples/: example1.txt
data/lab08/: students_input.json  students_output.json
data/lab09/: students.csv
src/lab01/: ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py
src/lab02/: arrays.py  matrix.py  tuples.py
src/lab03/: text_stats.py
src/lab04/: io_txt_csv.py  text_report.py
src/lab05/: csv_xlsx.py  json_csv.py
src/lab06/: cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: main.py  models.py  serialize.py
src/lab09/: group.py  models.py
src/lab10/: README.md  linked_list.py  structures.py  test.py
src/lib/: io_helpers.py  text.py
src/python_labs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_json_csv.py  test_text.py
